<resources>
    <string name="app_name">Unsplasher</string>

    <string name="no_network_connection">No network connection!</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_title">Creator Week</string>
    <string name="home_title_desc">The internet’s source of freely-usable images.</string>
    <string name="explore">Explore</string>
    <string name="latest">Latest</string>
    <string name="popular">Popular</string>
    <string name="random">Random</string>
    <string name="uploaded_by">Uploaded by:</string>
    <string name="follower">Followers</string>
    <string name="following">Following</string>
    <string name="likes">Likes</string>
    <string name="total_likes">Total Likes</string>
</resources>