<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="photoAdapter"
            type="com.ronur.unsplasher.base.BaseAdapter" />

        <variable
            name="vm"
            type="com.ronur.unsplasher.presentation.home.HomeViewModel" />

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">

        <TextView
            android:id="@+id/tv_home_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/home_title"
            android:textColor="@color/purple_200"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_home_title_desc"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:text="@string/home_title_desc"
            android:textColor="@color/general_text_color"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/tv_home_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_home_title" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="@string/explore"
            android:textColor="@color/general_text_color"
            android:textSize="42sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_home_title_desc"
            app:layout_constraintTop_toBottomOf="@+id/tv_home_title_desc" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <TextView
                android:id="@+id/tv_home_latest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/latest"
                android:textColor="@color/purple_200"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_home_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_horizontal"
                android:text="@string/popular"
                android:textColor="@color/general_text_color"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_home_random"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:gravity="end"
                android:text="@string/random"
                android:textColor="@color/general_text_color"
                android:textSize="17sp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_photos"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            app:adapter="@{photoAdapter}"
            app:updateList="@{vm.photoList}"
            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
            app:spanCount="2"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>