<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.ronur.unsplasher.presentation.userdetail.UserDetailViewModel" />

        <variable
            name="adapter"
            type="com.ronur.unsplasher.base.BaseAdapter" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        tools:context=".presentation.userdetail.UserDetailFragment">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/user_card_view"
                android:padding="15dp">

                <ImageView
                    android:id="@+id/iv_photo"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:adjustViewBounds="true"
                    app:glideCircularCrop="@{true}"
                    app:glideSrc="@{vm.user.profile_image.large}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@{vm.user.name}"
                    android:textColor="@color/general_text_color"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/iv_photo"
                    app:layout_constraintStart_toStartOf="@+id/iv_photo"
                    app:layout_constraintTop_toBottomOf="@+id/iv_photo" />

                <TextView
                    android:id="@+id/tv_bio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:maxLines="2"
                    android:text="@{vm.user.bio}"
                    android:textColor="@color/general_text_color"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toEndOf="@+id/iv_photo"
                    app:layout_constraintStart_toStartOf="@+id/iv_photo"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    app:layout_constraintEnd_toEndOf="@+id/iv_photo"
                    app:layout_constraintStart_toStartOf="@+id/iv_photo"
                    app:layout_constraintTop_toBottomOf="@+id/tv_bio">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp">

                        <TextView
                            android:id="@+id/tv_followers_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@{Integer.toString(vm.user.followers_count)}"
                            android:textColor="@color/general_text_color"
                            android:textSize="13sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/follower"
                            android:textColor="@color/general_text_color"
                            android:textSize="13sp" />

                    </LinearLayout>

                    <View
                        android:layout_width="1px"
                        android:layout_height="match_parent"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        android:background="@android:color/black" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp">

                        <TextView
                            android:id="@+id/tv_following_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@{Integer.toString(vm.user.following_count)}"
                            android:textColor="@color/general_text_color"
                            android:textSize="13sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/following"
                            android:textColor="@color/general_text_color"
                            android:textSize="13sp" />

                    </LinearLayout>

                    <View
                        android:layout_width="1px"
                        android:layout_height="match_parent"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        android:background="@android:color/black" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp">

                        <TextView
                            android:id="@+id/tv_total_likes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@{Integer.toString(vm.user.total_likes)}"
                            android:textColor="@color/general_text_color"
                            android:textSize="13sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/total_likes"
                            android:textColor="@color/general_text_color"
                            android:textSize="13sp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_photos"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView"
            app:spanCount="3"
            app:adapter="@{adapter}"
            app:updateList="@{vm.photoList}"
            tools:layout_editor_absoluteX="20dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>